Mobile: Allow for wrapping in pre elements in http://www.nmr-relax.com/fdl.html.

--- a/fdl.html
+++ b/fdl.html
@@ -34,7 +34,7 @@
   Version 1.3, 3 November 2008
 </p>
 
-<pre>
+<pre class="quoted_plain_text">
   Copyright (C) 2000, 2001, 2002, 2007, 2008 Free Software Foundation, Inc.
       <http://fsf.org/>
   Everyone is permitted to copy and distribute verbatim copies
@@ -569,7 +569,7 @@
   license notices just after the title page:
 </p>
 
-<pre>
+<pre class="quoted_plain_text">
   Copyright (c)  YEAR  YOUR NAME.
   Permission is granted to copy, distribute and/or modify this document
   under the terms of the GNU Free Documentation License, Version 1.3
@@ -584,7 +584,7 @@
   replace the "with...Texts." line with this:
 </p>
 
-<pre>
+<pre class="quoted_plain_text">
   with the Invariant Sections being LIST THEIR TITLES, with the
   Front-Cover Texts being LIST, and with the Back-Cover Texts being LIST.
 </pre>
