Mobile: The mobile header is now fixed.
This required javascript modifications to preserve scrolling between opening and closing the menu.

--- a/head.html
+++ b/head.html
@@ -47,16 +47,29 @@
       var menu = document.getElementById("menu_elements");
       var main = document.getElementsByClassName("main")[0];
       var footer = document.getElementsByClassName("footer")[0];
+
       if (menu.style.display == "block") {
         menu.style.display = "none";
         main.style.display = "block";
         footer.style.display = "block";
+
+        // Reset the scrolling.
+        document.body.scrollTop = scroll; // For Safari
+        document.documentElement.scrollTop = scroll; // For Chrome, Firefox, IE and Opera
       } else {
         menu.style.display = "block";
         main.style.display = "none";
         footer.style.display = "none";
+
+        // Set the scrolling to see the top of the menu.
+        scroll = (document.body.scrollTop || document.documentElement.scrollTop)
+        document.body.scrollTop = 0; // For Safari
+        document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
       }
     }
+
+    // The current amount of scrolling.
+    var scroll = (document.body.scrollTop || document.documentElement.scrollTop)
   </script>
 
   <!-- Icon for the mobile menu -->
