--- a/head.html
+++ b/head.html
@@ -73,6 +73,6 @@
   </script>
 
   <!-- Icon for the mobile menu -->
-   <link rel="stylesheet" href="/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
   <!-- End SSI head element -->
