--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="header_image_small">
-  <a href="/" name="relax" type="image/png"><img src="/relax_logo_hires.png" class="image"/></a>
+  <a href="/" name="relax" type="image/png"><img src="/relax_logo_hires.png" alt="relax: dynamics analysis, model-free analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, relaxation dispersion, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules." class="image"/></a>
 </div>
 
 <div class="header">
