Mobile: Fix for the mobile menu icon div box - removal of the old <a> attribute "href".

--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
     <a href="/" type="image/png"><img src="/relax_logo_hires.png" alt="relax: dynamics analysis, model-free analysis, relaxation data, R1 and R2 exponential curve-fitting, steady-state NOE calculation, reduced spectral density mapping, relaxation dispersion, N-state model, frame order dynamics theories, stereochemistry, conformational analysis, organic molecules, proteins, RNA, DNA, sugars, and other biomolecules."/></a>
 
     <!-- Mobile menu toggle -->
-    <div href="javascript:void(0);" class="icon" onclick="toggleMobileMenu()">
+    <div class="icon" onclick="toggleMobileMenu()">
       <i class="fa fa-bars"></i>
     </div>
   </div>
