Fix for an end tag mix up for the relax logo on the main page.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  <h1>relax</h1>
 
     <div class="main_graphic large">
-     <img src="/relax_logo_hires.png"/ alt="The relax logo" class="logo">
+     <img src="/relax_logo_hires.png" alt="The relax logo" class="logo"/>
     </div>
 
     <p>The program relax is a software package designed for the study of molecular dynamics through the analysis of experimental NMR data.  Organic molecules, proteins, RNA, DNA, sugars, and other biomolecules are all supported.  It was originally written for the model-free analysis of protein dynamics, though its scope has been significantly expanded.</p>
