Added the missing "type" attribute for the javascript script tag for enabling collapsible sections.

--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
 <div class="clear"></div>
 
 <!-- Enable collapsible sections for mobile view -->
-<script>
+<script type="text/javascript">
     var coll = document.getElementsByClassName("collapsible_section");
     var i;
 
