Javascript: XHTML compatibility fixes for all JS.

--- a/footer.html
+++ b/footer.html
@@ -3,6 +3,8 @@
 
 <!-- Enable collapsible sections for mobile view -->
 <script type="text/javascript">
+  //<![CDATA[
+
     var coll = document.getElementsByClassName("collapsible_section");
     var i;
 
@@ -44,6 +46,7 @@
       coll[i].addEventListener("click", collapse_header);
     }
 
+  //]]>
 </script>
 
 <div class="footer">
