--- a/head.html
+++ b/head.html
@@ -15,6 +15,7 @@
 
   <!--Google analytics JS-->
   <script type="text/javascript">
+    //<![CDATA[
 
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-30096326-1']);
@@ -27,10 +28,12 @@
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
 
+    //]]>
   </script>
 
   <!--Collapsible menu JS -->
   <script type="text/javascript">
+    //<![CDATA[
 
     function collapseMenu(object_id) {
       if (!document.getElementById) return;
@@ -39,10 +42,13 @@
       obj.display = (obj.display == 'block')?'none': 'block';
     }
 
+    //]]>
   </script>
 
   <!-- Mobile menu JS -->
   <script type="text/javascript">
+    //<![CDATA[
+
     function toggleMobileMenu() {
       var menu = document.getElementById("menu_elements");
       var main = document.getElementsByClassName("main")[0];
@@ -70,6 +76,8 @@
 
     // The current amount of scrolling.
     var scroll = (document.body.scrollTop || document.documentElement.scrollTop)
+
+    //]]>
   </script>
 
   <!-- Icon for the mobile menu -->
