Fixes for the img tags for the main graphics.

--- a/communication.html
+++ b/communication.html
@@ -31,7 +31,7 @@
  <h1>Interacting with the relax community</h1>
 
   <div class="main_graphic large">
-   <img src="/images/dipole_pair.png"/ alt="A nitrogen-proton nuclear dipole pair in the presence of an external magnetic field">
+   <img src="/images/dipole_pair.png" alt="A nitrogen-proton nuclear dipole pair in the presence of an external magnetic field"/>
   </div>
 
   <p>
