--- a/docs.html
+++ b/docs.html
@@ -31,7 +31,7 @@
  <h1>Documentation</h1>
 
   <div class="main_graphic small">
-   <img src="/images/pipe_bundle.png"/ alt="A representation of the relax internal data structure">
+   <img src="/images/pipe_bundle.png" alt="A representation of the relax internal data structure"/>
   </div>
 
   <p>
