--- a/download.html
+++ b/download.html
@@ -32,7 +32,7 @@
  <h1>relax downloads</h1>
 
   <div class="main_graphic small">
-   <img src="/images/relax-package.svg"/ alt="A relax archive package">
+   <img src="/images/relax-package.svg" alt="A relax archive package"/>
   </div>
 
   <p>
