--- a/screenshots.html
+++ b/screenshots.html
@@ -32,7 +32,7 @@
  <h1>Screenshots</h1>
 
   <div class="main_graphic small">
-   <img src="/images/screenshots/graphic.svg"/ alt="Screenshot graphic for the software relax">
+   <img src="/images/screenshots/graphic.svg" alt="Screenshot graphic for the software relax"/>
   </div>
   <p>
    Here are a number of screenshots of relax in action.
