Fix for a thead tag in the download page.

--- a/download.html
+++ b/download.html
@@ -2243,7 +2243,7 @@
     <div class="section_content">
 
 <table class="release_table">
-  </thead>
+  <thead>
     <tr>
       <td class="package">Distribution package</td>
       <td class="md5sum">MD5 checksum</td>
