Fix for an unescaped & in the references.

--- a/refs.html
+++ b/refs.html
@@ -115,7 +115,7 @@
     <p>It is also available in <a href="http://www.amazon.com/Protein-Dynamics-Model-free-Analysis-Relaxation/dp/3639057627">published book form</a>.</p>
    </div> <!-- End of h3 section_content -->
 
-   <h3 class="collapsible_section">Original Lipari & Szabo theory</h3>
+   <h3 class="collapsible_section">Original Lipari &amp; Szabo theory</h3>
    <div class="section_content">
 
     <p>The model-free theory papers are:</p>
