Mobile: Protection of the mobile menu javascript when the document body doesn't exist yet.

--- a/head.html
+++ b/head.html
@@ -75,7 +75,10 @@
     }
 
     // The current amount of scrolling.
-    var scroll = (document.body.scrollTop || document.documentElement.scrollTop)
+    var scroll = null;
+    if (document.body) {
+        var scroll = (document.body.scrollTop || document.documentElement.scrollTop)
+    }
 
     //]]>
   </script>
