Mobile: Javascript to handle mobile to non-mobile transition, so that all elements are shown.

--- a/head.html
+++ b/head.html
@@ -54,6 +54,7 @@
       var main = document.getElementsByClassName("main")[0];
       var footer = document.getElementsByClassName("footer")[0];
 
+      // Show the main page.
       if (menu.style.display == "block") {
         menu.style.display = "none";
         main.style.display = "block";
@@ -62,6 +63,8 @@
         // Reset the scrolling.
         document.body.scrollTop = scroll; // For Safari
         document.documentElement.scrollTop = scroll; // For Chrome, Firefox, IE and Opera
+
+      // Show only the menu.
       } else {
         menu.style.display = "block";
         main.style.display = "none";
@@ -79,6 +82,46 @@
     if (document.body) {
         var scroll = (document.body.scrollTop || document.documentElement.scrollTop)
     }
+
+    //]]>
+  </script>
+
+  <!-- Mobile to non-mobile transitions. -->
+  <script type="text/javascript">
+    //<![CDATA[
+
+    var mobile = window.matchMedia('(max-width: 600px)');
+    var prev_mobile = mobile.matches;
+
+    function transitionMobile() {
+      var menu = document.getElementsByClassName("menu")[0];
+      var menu_elements = document.getElementById("menu_elements");
+      var main = document.getElementsByClassName("main")[0];
+      var footer = document.getElementsByClassName("footer")[0];
+
+      mobile = window.matchMedia('(max-width: 600px)');
+
+      // Mobile to non-mobile transition.
+      if (prev_mobile && !mobile.matches) {
+        menu.style.display = "block";
+        menu_elements.style.display = "block";
+        main.style.display = "block";
+        footer.style.display = "block";
+      }
+
+      // Non-mobile to mobile transition.
+      if (!prev_mobile && mobile.matches) {
+        menu.style.display = "block";
+        menu_elements.style.display = "none";
+        main.style.display = "block";
+        footer.style.display = "block";
+      }
+
+      // Store the value.
+      prev_mobile = mobile.matches;
+    }
+
+    window.addEventListener("resize", transitionMobile);
 
     //]]>
   </script>
