Mobile: Correct handling of collapsed sections for web crawlers.
The sections must start opened and not be set to open on click.

--- a/footer.html
+++ b/footer.html
@@ -18,12 +18,6 @@
         this.classList.toggle("collapsible_section_open");
         var section_content = this.nextElementSibling;
 
-        // No collapsible sections for web crawlers.
-        if (re.test(userAgent)) {
-            section_content.style.display = "block";
-            return;
-        }
-
         // Allow non-mobile view to be disabled.
         const mobile = window.matchMedia('(min-width: 600px)');
 
@@ -43,7 +37,14 @@
 
     // Event listeners.
     for (i = 0; i < coll.length; i++) {
-      coll[i].addEventListener("click", collapse_header);
+        coll[i].addEventListener("click", collapse_header);
+
+        // No collapsed start for web crawlers.
+        if (re.test(userAgent)) {
+            coll[i].classList.toggle("collapsible_section_open");
+            var section_content = coll[i].nextElementSibling;
+            section_content.style.display = "block";
+        }
     }
 
   //]]>
