Mobile: Slight improvement when showing the mobile menu with the end spacing removed.

--- a/head.html
+++ b/head.html
@@ -52,12 +52,14 @@
     function toggleMobileMenu() {
       var menu = document.getElementById("menu_elements");
       var main = document.getElementsByClassName("main")[0];
+      var clear = document.getElementsByClassName("clear")[0];
       var footer = document.getElementsByClassName("footer")[0];
 
       // Show the main page.
       if (menu.style.display == "block") {
         menu.style.display = "none";
         main.style.display = "block";
+        clear.style.display = "block";
         footer.style.display = "block";
 
         // Reset the scrolling.
@@ -68,6 +70,7 @@
       } else {
         menu.style.display = "block";
         main.style.display = "none";
+        clear.style.display = "none";
         footer.style.display = "none";
 
         // Set the scrolling to see the top of the menu.
@@ -97,6 +100,7 @@
       var menu = document.getElementsByClassName("menu")[0];
       var menu_elements = document.getElementById("menu_elements");
       var main = document.getElementsByClassName("main")[0];
+      var clear = document.getElementsByClassName("clear")[0];
       var footer = document.getElementsByClassName("footer")[0];
 
       mobile = window.matchMedia('(max-width: 600px)');
@@ -106,6 +110,7 @@
         menu.style.display = "block";
         menu_elements.style.display = "block";
         main.style.display = "block";
+        clear.style.display = "block";
         footer.style.display = "block";
       }
 
@@ -114,6 +119,7 @@
         menu.style.display = "block";
         menu_elements.style.display = "none";
         main.style.display = "block";
+        clear.style.display = "block";
         footer.style.display = "block";
       }
 
