Download: Updated the ancient Python 2 information to Python 3.

--- a/download.html
+++ b/download.html
@@ -79,7 +79,7 @@
 
     <p>The current stable release is <a href="http://wiki.nmr-relax.com/Relax_5.0.0">relax version 5.0.0</a> <em>(24 August 2020)</em>.</p>
 
-      <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.7 but usually work with other Python versions.  If not, or if binaries for your system do not exist, please download the source release (note that the compilation of binary modules is not a prerequisite for using relax).  If the binary distribution file for your architecture does not correspond to the most up to date version of relax, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the <a href="manual/Open_source_infrastructure.html">Open source infrastructure</a> chapter of the relax manual for details.</p>
+      <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 3 but usually work with other Python versions.  If not, or if binaries for your system do not exist, please download the source release (note that the compilation of binary modules is not a prerequisite for using relax).  If the binary distribution file for your architecture does not correspond to the most up to date version of relax, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the <a href="manual/Open_source_infrastructure.html">Open source infrastructure</a> chapter of the relax manual for details.</p>
 
       <p>For details about the relax GPG signatures and their usage, see the Security section at the <a href="download.html#Security">end of this page</a>.</p>
 
@@ -93,9 +93,9 @@
 
         <h4>wxPython</h4>
 
-          <p>The relax graphical user interface (GUI) is implemented using <a href="http://www.wxpython.org/">wxPython</a>.  This package is essential if the GUI is to be used.  As wxPython currently does not support Python 3, you will need to use Python 2 to access the GUI.</p>
+          <p>The relax graphical user interface (GUI) is implemented using <a href="http://www.wxpython.org/">wxPython</a>.  This package is essential if the GUI is to be used.</p>
 
-          <p>When using a 64-bit Mac OS X system, 64-bit compatible wxPython must be used, i.e. a version using the Cocoa API for implementing the GUI. Currently, this is only available for Python 2.7.</p>
+          <p>When using a 64-bit Mac OS X system, 64-bit compatible wxPython must be used, i.e. a version using the Cocoa API for implementing the GUI.</p>
 
         <h4>SciPy</h4>
 
@@ -150,7 +150,7 @@
     <h3 id="GNU_Linux" class="collapsible_section">GNU/Linux</h3>
     <div class="section_content">
 
-      <p>Pre-compiled binary releases for GNU/Linux can be downloaded for both 32-bit (i686) and 64-bit (x86_64) machines.  These have been compiled for Python 2.7, though should work for versions 2.5 and 2.6.  But if there are problems with the compiled C modules, please either use the <a href="download.html#Source_code_release">source distribution</a> or install <a href="download.html#dep_versions">Python 2.7</a>.</p>
+      <p>Pre-compiled binary releases for GNU/Linux can be downloaded for both 32-bit (i686) and 64-bit (x86_64) machines.  These have been compiled for Python 3, though should work for versions 2.5 to 2.7.  If there are problems with the compiled C modules, please either use the <a href="download.html#Source_code_release">source distribution</a>.</p>
 
 <table class="release_table">
   <thead>
@@ -184,9 +184,9 @@
     <h3 id="MS_Windows" class="collapsible_section">MS Windows</h3>
     <div class="section_content">
 
-      <p>The pre-compiled binary release for 32 bit Windows can be downloaded from the link below.  These have been compiled for Python 2.7 therefore if there are problems with the compiled C modules and the command:</p>
+      <p>The pre-compiled binary release for 32 bit Windows can be downloaded from the link below.  These have been compiled for Python 3 therefore if there are problems with the compiled C modules and the command:</p>
       <p><em>$ relax --info</em></p>
-      <p>says that the C modules are not installed, please install <a href="download.html#dep_versions">Python 2.7</a>.</p>
+      <p>says that the C modules are not installed, please install <a href="download.html#dep_versions">Python 3</a>.</p>
 
 <table class="release_table">
   <thead>
