Updated the http://www.nmr-relax.com/download.html webpage for the relax 5.1.0 release.

--- a/download.html
+++ b/download.html
@@ -55,6 +55,7 @@
    <li><a href="download.html#New_releases">New releases</a></li>
    <li><a href="download.html#All_releases">All releases</a>
     <ul>
+     <li><a href="download.html#series_5.1">5.1 series</a></li>
      <li><a href="download.html#series_5.0">5.0 series</a></li>
      <li><a href="download.html#series_4.1">4.1 series</a></li>
      <li><a href="download.html#series_4.0">4.0 series</a></li>
@@ -77,7 +78,7 @@
    <h2 id="Current_release" class="collapsible_section">Current release</h2>
    <div class="section_content">
 
-    <p>The current stable release is <a href="http://wiki.nmr-relax.com/Relax_5.0.0">relax version 5.0.0</a> <em>(24 August 2020)</em>.</p>
+    <p>The current stable release is <a href="http://wiki.nmr-relax.com/Relax_5.1.0">relax version 5.1.0</a> <em>(07 June 2024)</em>.</p>
 
       <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 3 but usually work with other Python versions.  If not, or if binaries for your system do not exist, please download the source release (note that the compilation of binary modules is not a prerequisite for using relax).  If the binary distribution file for your architecture does not correspond to the most up to date version of relax, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the <a href="manual/Open_source_infrastructure.html">Open source infrastructure</a> chapter of the relax manual for details.</p>
 
@@ -163,16 +164,16 @@
   </thead>
   <tbody>
     <tr>
-      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.0.0/relax-5.0.0.GNU-Linux.i686.tar.bz2" title="relax">relax-5.0.0.GNU-Linux.i686.tar.bz2</a></td>
-      <td class="md5sum">5870486e8bd237c1aa8b9b7ee3542ae5</td>
-      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.0.0/relax-5.0.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td class="size">106,823,511</td>
+      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.GNU-Linux.i686.tar.bz2" title="relax">relax-5.1.0.GNU-Linux.i686.tar.bz2</a></td>
+      <td class="md5sum">39093c0a7cc03d2cacf686390da2cf0e</td>
+      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td class="size">110,179,943</td>
     </tr>
     <tr>
-      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.0.0/relax-5.0.0.GNU-Linux.x86_64.tar.bz2" title="relax">relax-5.0.0.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td class="md5sum">c8f8516fbe826a6f7fa5b09d76c9694c</td>
-      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.0.0/relax-5.0.0.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td class="size">106,800,456</td>
+      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.GNU-Linux.x86_64.tar.bz2" title="relax">relax-5.1.0.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td class="md5sum">f276c5ca84afaa29ae5aecd42e5e3f2d</td>
+      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td class="size">110,251,692</td>
     </tr>
   </tbody>
 </table>
@@ -199,10 +200,10 @@
   </thead>
   <tbody>
     <tr>
-      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.0.0/relax-5.0.0.Win32.zip" title="relax">relax-5.0.0.Win32.zip</a></td>
-      <td class="md5sum">e6a6dfd353e76b3a9f9f99bdcb0b3da6</td>
-      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.0.0/relax-5.0.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td class="size">113,559,238</td>
+      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.Win32.zip" title="relax">relax-5.1.0.Win32.zip</a></td>
+      <td class="md5sum">9c62f23a63d86d46f9b89244b7388dcb</td>
+      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td class="size">116,782,862</td>
     </tr>
   </tbody>
 </table>
@@ -234,10 +235,10 @@
   </thead>
   <tbody>
     <tr>
-      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.0.0/relax-5.0.0.Darwin.dmg" title="relax">relax-5.0.0.Darwin.dmg</a></td>
-      <td class="md5sum">7e5cee05c0a6863ed404bb4c26b32014</td>
-      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.0.0/relax-5.0.0.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
-      <td class="size">335,743,957</td>
+      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.Darwin.dmg" title="relax">relax-5.1.0.Darwin.dmg</a></td>
+      <td class="md5sum">06a63cd03e9c61986b284dd102310ea3</td>
+      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td class="size">342,798,286</td>
     </tr>
   </tbody>
 </table>
@@ -300,16 +301,16 @@
   </thead>
   <tbody>
     <tr>
-      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.0.0/relax-5.0.0.src.tar.bz2" title="relax">relax-5.0.0.src.tar.bz2</a></td>
-      <td class="md5sum">7b1e7bdd90e10b8fe1c259f82347d007</td>
-      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.0.0/relax-5.0.0.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td class="size">106,814,515</td>
+      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.src.tar.bz2" title="relax">relax-5.1.0.src.tar.bz2</a></td>
+      <td class="md5sum">49a69f7a47f38c7c7e87719b17352297</td>
+      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td class="size">110,237,722</td>
     </tr>
     <tr>
-      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.0.0/relax-5.0.0.src.zip" title="relax">relax-5.0.0.src.zip</a></td>
-      <td class="md5sum">e68fcb2331d8ace3f6a8d47582f782cf</td>
-      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.0.0/relax-5.0.0.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td class="size">113,559,615</td>
+      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.src.zip" title="relax">relax-5.1.0.src.zip</a></td>
+      <td class="md5sum">1cefabe5cc23ed107bfb8a913d0dfe27</td>
+      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td class="size">116,783,238</td>
     </tr>
   </tbody>
 </table>
@@ -376,6 +377,64 @@
    <div class="section_content">
 
     <p>Descriptions of these releases are available from the <a href='https://gna.org/news/?group=relax'>relax news pages</a>.  These files can either be found on the <a href="https://sourceforge.net/projects/nmr-relax/files/">relax download site</a> or are <a href="https://sourceforge.net/projects/nmr-relax/files/4.0.1/">available upon request</a>.</p>
+
+
+    <h3 id="series_5.1" class="collapsible_section">The 5.1 series</h3>
+    <div class="section_content">
+
+<table class="release_table">
+  <thead>
+    <tr>
+      <td class="package">Distribution package</td>
+      <td class="md5sum">MD5 checksum</td>
+      <td class="gpg">GPG signature</td>
+      <td class="size">File size (bytes)</td>
+    </tr>
+  </thead>
+
+  <tbody>
+    <tr class="release"><td colspan="4"><a href="http://wiki.nmr-relax.com/Relax_5.1.0">Version 5.1.0</a> (2024-06-07)</td></tr>
+    <tr>
+      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.GNU-Linux.i686.tar.bz2" title="relax">relax-5.1.0.GNU-Linux.i686.tar.bz2</a></td>
+      <td class="md5sum">39093c0a7cc03d2cacf686390da2cf0e</td>
+      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td class="size">110,179,943</td>
+    </tr>
+    <tr>
+      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.GNU-Linux.x86_64.tar.bz2" title="relax">relax-5.1.0.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td class="md5sum">f276c5ca84afaa29ae5aecd42e5e3f2d</td>
+      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td class="size">110,251,692</td>
+    </tr>
+    <tr>
+      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.Win32.zip" title="relax">relax-5.1.0.Win32.zip</a></td>
+      <td class="md5sum">9c62f23a63d86d46f9b89244b7388dcb</td>
+      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td class="size">116,782,862</td>
+    </tr>
+    <tr>
+      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.Darwin.dmg" title="relax">relax-5.1.0.Darwin.dmg</a></td>
+      <td class="md5sum">06a63cd03e9c61986b284dd102310ea3</td>
+      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td class="size">342,798,286</td>
+    </tr>
+    <tr>
+      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.src.tar.bz2" title="relax">relax-5.1.0.src.tar.bz2</a></td>
+      <td class="md5sum">49a69f7a47f38c7c7e87719b17352297</td>
+      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td class="size">110,237,722</td>
+    </tr>
+    <tr>
+      <td class="package"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.src.zip" title="relax">relax-5.1.0.src.zip</a></td>
+      <td class="md5sum">1cefabe5cc23ed107bfb8a913d0dfe27</td>
+      <td class="gpg"><a href="https://sourceforge.net/projects/nmr-relax/files/5.1.0/relax-5.1.0.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td class="size">116,783,238</td>
+
+  </tbody>
+
+</table>
+
+    </div> <!-- End of h3 section_content -->
 
 
     <h3 id="series_5.0" class="collapsible_section">The 5.0 series</h3>
